--- a/helper.gradle
+++ b/helper.gradle
@@ -18,6 +18,14 @@ subprojects {
         it.options.deprecation = true
     }
 
+    processResources {
+        inputs.property 'version', project.version
+
+        filesMatching(['fabric.mod.json', 'META-INF/mods.toml']) {
+            expand 'version': project.version
+        }
+    }
+
     apply plugin: 'maven-publish'
     publishing {
         repositories {
