--- a/helper.gradle
+++ b/helper.gradle
@@ -1,3 +1,12 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.9.11'
+    }
+}
+
 subprojects {
     version = '0.0.0'
 
@@ -24,6 +33,11 @@ subprojects {
 
     dependencies {
         implementation "com.google.code.findbugs:jsr305:3.0.2"
+    }
+
+    apply plugin: 'checkstyle'
+    checkstyle {
+        toolVersion = "10.6.0"
     }
 
     processResources {
@@ -59,5 +73,17 @@ subprojects {
                 from(components.java)
             }
         }
+    }
+}
+
+ext.enablePitest = {
+    apply plugin: 'java'
+    apply plugin: info.solidsoft.gradle.pitest.PitestPlugin
+    pitest {
+        junit5PluginVersion = "1.1.2"
+        pitestVersion = "1.10.4"
+        outputFormats.set(['HTML'])
+        mutationThreshold.set(90)
+        coverageThreshold.set(80)
     }
 }
