--- a/helper.gradle
+++ b/helper.gradle
@@ -1,11 +1,24 @@
 buildscript {
     repositories {
         mavenCentral()
+        maven {
+            name = 'Sponge / Mixin'
+            url = 'https://repo.spongepowered.org/repository/maven-public/'
+        }
+        maven {
+            url = 'https://maven.minecraftforge.net'
+        }
     }
     dependencies {
         classpath 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.9.11'
         classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.3'
+        classpath 'org.spongepowered:vanillagradle:0.2.1-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:5.1.+'
     }
+}
+
+allprojects {
+    apply plugin: 'jacoco'
 }
 
 subprojects {
@@ -20,7 +33,6 @@ subprojects {
     }
 
     apply plugin: 'java'
-    apply plugin: 'jacoco'
     java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
     tasks.withType(JavaCompile).configureEach {
@@ -77,6 +89,17 @@ subprojects {
         }
     }
 
+    ext {
+        minecraftVersion = "1.19.3"
+        // https://www.curseforge.com/minecraft/mc-mods/jei/files
+        jeiVersion = "12.0.2.2"
+        // https://www.curseforge.com/minecraft/mc-mods/roughly-enough-items/files
+        reiVersion = "10.0.581"
+        architecturyVersion = "7.1.70" // dependency of rei
+        clothMathVersion = "0.6.1" // dependency of rei
+        clothConfigVersion = "9.0.94" // dependency of rei
+    }
+
     ext.enablePitest = {
         apply plugin: info.solidsoft.gradle.pitest.PitestPlugin
         pitest {
@@ -91,16 +114,97 @@ subprojects {
     ext.enableJavadoc = {
         ext.javadocEnabled = true
     }
+
+    ext.commonProject = {
+        apply plugin: org.spongepowered.gradle.vanilla.VanillaGradle
+        minecraft {
+            version(minecraftVersion)
+        }
+        sourceSets {
+            main.resources.srcDirs += 'src/generated/resources'
+        }
+        dependencies {
+            compileOnly "org.spongepowered:mixin:0.8.4"
+        }
+    }
+
+    ext.forgeProject = { String modId, Project commonProject, ArrayList apis = [], ArrayList compileApis = [] ->
+        apply plugin: net.minecraftforge.gradle.userdev.UserDevPlugin
+        minecraft {
+            mappings channel: 'official', version: minecraftVersion
+            accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
+            runs {
+                client {
+                    workingDirectory project.file('run')
+                    ideaModule "${rootProject.name}.${project.name}.main"
+                    taskName 'Client'
+                    mods {
+                        modClientRun {
+                            source sourceSets.main
+                            apis.collect {
+                                source(project(it).sourceSets.main)
+                            }
+                            compileApis.collect {
+                                source(project(it).sourceSets.main)
+                            }
+                        }
+                    }
+                }
+                server {
+                    workingDirectory project.file('run')
+                    ideaModule "${rootProject.name}.${project.name}.main"
+                    taskName 'Server'
+                    mods {
+                        modServerRun {
+                            source sourceSets.main
+                            apis.collect {
+                                source(project(it).sourceSets.main)
+                            }
+                            compileApis.collect {
+                                source(project(it).sourceSets.main)
+                            }
+                        }
+                    }
+                }
+                data {
+                    args '--mod', modId, '--all', '--output', commonProject.file('src/generated/resources'), "--existing", commonProject.file('src/main/resources')
+                    ideaModule "${rootProject.name}.${project.name}.main"
+                    taskName 'Data'
+                }
+            }
+        }
+        dependencies {
+            minecraft "net.minecraftforge:forge:${minecraftVersion}-44.1.5"
+            apis.collect {
+                implementation project(it)
+            }
+            compileApis.collect {
+                implementation project(it)
+            }
+        }
+        processResources {
+            from commonProject.sourceSets.main.resources
+        }
+        tasks.withType(JavaCompile) {
+            apis.collect {
+                source(project(it).sourceSets.main.allSource)
+            }
+            compileApis.collect {
+                source(project(it).sourceSets.main.allSource)
+            }
+        }
+        jar.finalizedBy('reobfJar')
+    }
 }
 
 tasks.register('allJavadoc', Javadoc) {
-    def projects = subprojects.stream().filter {p -> p.hasProperty('javadocEnabled')}.toList()
+    def projects = subprojects.stream().filter { p -> p.hasProperty('javadocEnabled') }.toList()
     source projects*.sourceSets.main.allJava
     classpath += files(projects*.sourceSets.main.compileClasspath)
     destinationDir = file("build/docs/javadoc")
 }
 
-// http://csiebler.github.io/blog/2014/02/09/multi-project-code-coverage-using-gradle-and-jacoco/
+// https://web.archive.org/web/20200206112725/http://csiebler.github.io/blog/2014/02/09/multi-project-code-coverage-using-gradle-and-jacoco/
 tasks.register('codeCoverageReport', JacocoReport) {
     executionData fileTree(project.rootDir.absolutePath).include("**/build/jacoco/*.exec")
     subprojects.each {
