--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,10 @@ on:
       version:
         required: false
         type: string
+      pitest:
+        required: false
+        type: boolean
+        default: false
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -57,6 +61,7 @@ jobs:
           reports: |
             **/build/reports/checkstyle/*.xml
       - name: Mutation testing
+        if: ${{ inputs.pitest == true }}
         run: ./gradlew pitest
       - name: Upload build artifacts
         if: ${{ runner.os == 'Linux' }}
