--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,10 @@ on:
         required: false
         type: boolean
         default: false
+      sonarqube:
+        required: false
+        type: boolean
+        default: ${{ !github.event.pull_request.head.repo.fork }}
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -37,15 +41,12 @@ jobs:
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
       - name: Build and test
-        if: ${{ github.event.pull_request.head.repo.fork }}
         run: ./gradlew build codeCoverageReport
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      # TODO: We have to disable Sonar for now on forked PR builds as the analyze fails due to permission issues.
-      - name: Build, test and analyze
-        if: ${{ !github.event.pull_request.head.repo.fork }}
-        run: ./gradlew build codeCoverageReport sonarqube
+      - name: Analyze
+        if: ${{ inputs.sonarqube == true }}
+        run: ./gradlew sonarqube
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
