--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ on:
       mutation-testing:
         required: false
         type: boolean
-        default: false
+        default: true
       sonarqube:
         required: false
         type: boolean
