fix: pass secrets to make Sonar work

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -61,6 +61,7 @@ jobs:
       version: ${{ needs.extract-version-number.outputs.version }}
       mutation-testing: ${{ inputs.mutation-testing }}
       sonarqube: ${{ inputs.sonarqube }}
+    secrets: inherit
 
   publish-maven:
     name: Publish Maven packages
