--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       - name: Setup Java
-        uses: ./.github/actions/setup-java
+        uses: refinedmods/refinedarchitect/.github/actions/setup-java@develop
       # https://docs.sonarqube.org/latest/analysis/github-integration/
       - name: Cache SonarQube packages
         if: ${{ inputs.sonarqube == true }}
