--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -73,7 +73,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Setup Java
-        uses: ./.github/actions/setup-java
+        uses: refinedmods/refinedarchitect/.github/actions/setup-java@develop
       - name: Publish to Maven
         run: ./gradlew publish
         env:
@@ -91,7 +91,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Setup Java
-        uses: ./.github/actions/setup-java
+        uses: refinedmods/refinedarchitect/.github/actions/setup-java@develop
       - name: Build documentation
         run: ./gradlew allJavadoc
       - name: Publish documentation
