--- a/helper.gradle
+++ b/helper.gradle
@@ -160,6 +160,7 @@ subprojects {
                             compileApis.collect {
                                 source(project(it).sourceSets.main)
                             }
+                            source(commonProject.sourceSets.main)
                         }
                     }
                 }
@@ -176,6 +177,7 @@ subprojects {
                             compileApis.collect {
                                 source(project(it).sourceSets.main)
                             }
+                            source(commonProject.sourceSets.main)
                         }
                     }
                 }
@@ -194,6 +196,7 @@ subprojects {
             compileApis.collect {
                 implementation project(it)
             }
+            implementation commonProject
         }
         processResources {
             from commonProject.sourceSets.main.resources
@@ -205,6 +208,7 @@ subprojects {
             compileApis.collect {
                 source(project(it).sourceSets.main.allSource)
             }
+            source(commonProject.sourceSets.main.allSource)
         }
         jar.finalizedBy('reobfJar')
     }
@@ -232,6 +236,7 @@ subprojects {
             compileApis.collect {
                 implementation project(it)
             }
+            implementation commonProject
         }
         processResources {
             from commonProject.sourceSets.main.resources
@@ -240,6 +245,7 @@ subprojects {
             compileApis.collect {
                 source(project(it).sourceSets.main.allSource)
             }
+            source(commonProject.sourceSets.main.allSource)
         }
         jar {
             from '../LICENSE.md'
