--- a/helper.gradle
+++ b/helper.gradle
@@ -18,8 +18,9 @@ buildscript {
         classpath 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.9.11'
         classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.3'
         classpath 'org.spongepowered:vanillagradle:0.2.1-SNAPSHOT'
-        classpath 'net.minecraftforge.gradle:ForgeGradle:5.1.+'
-        classpath 'fabric-loom:fabric-loom.gradle.plugin:1.1-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:[6.0,6.2)'
+        classpath 'fabric-loom:fabric-loom.gradle.plugin:1.2-SNAPSHOT'
+        classpath 'org.gradle.toolchains:foojay-resolver:0.5.0'
     }
 }
 
@@ -143,6 +144,7 @@ subprojects {
 
     ext.forgeProject = { String modId, Project commonProject, ArrayList apis = [], ArrayList compileApis = [] ->
         apply plugin: net.minecraftforge.gradle.userdev.UserDevPlugin
+        apply plugin: org.gradle.toolchains.foojay.FoojayToolchainsConventionPlugin
         minecraft {
             mappings channel: 'official', version: minecraftVersion
             accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
