--- a/helper.gradle
+++ b/helper.gradle
@@ -72,11 +72,14 @@ subprojects {
     }
 
     ext {
-        minecraftVersion = "1.19.4"
+        minecraftVersion = "1.20.1"
+        forgeVersion = "47.0.35"
+        fabricLoaderVersion = "0.14.21"
+        fabricApiVersion = "0.85.0+1.20.1"
         // https://www.curseforge.com/minecraft/mc-mods/jei/files
-        jeiVersion = "13.1.0.11"
+        jeiVersion = "15.2.0.22"
         // https://www.curseforge.com/minecraft/mc-mods/roughly-enough-items/files
-        reiVersion = "11.0.603"
+        reiVersion = "12.0.626"
         architecturyVersion = "8.1.73" // dependency of rei
         clothMathVersion = "0.6.1" // dependency of rei
         clothConfigVersion = "10.0.96" // dependency of rei
@@ -189,7 +192,7 @@ subprojects {
             }
         }
         dependencies {
-            minecraft "net.minecraftforge:forge:${minecraftVersion}-45.0.64"
+            minecraft "net.minecraftforge:forge:${minecraftVersion}-${forgeVersion}"
             apis.collect {
                 implementation project(it)
             }
@@ -227,8 +230,8 @@ subprojects {
                 officialMojangMappings()
                 parchment("org.parchmentmc.data:parchment-1.19.3:2023.03.12@zip")
             }
-            modImplementation "net.fabricmc:fabric-loader:0.14.21"
-            modImplementation "net.fabricmc.fabric-api:fabric-api:0.82.0+1.19.4"
+            modImplementation "net.fabricmc:fabric-loader:${fabricLoaderVersion}"
+            modImplementation "net.fabricmc.fabric-api:fabric-api:${fabricApiVersion}"
             apis.collect {
                 implementation project(it)
                 include project(it)
