--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -17,6 +17,10 @@ on:
         required: false
         type: boolean
         default: true
+      curseforge:
+        required: false
+        type: boolean
+        default: false
 jobs:
   extract-version-number:
     name: Extract version number
@@ -126,6 +130,23 @@ jobs:
           files: |
             **/build/libs/*.jar
 
+  deploy-curseforge:
+    name: Deploy to CurseForge
+    runs-on: ubuntu-latest
+    needs: [ build, extract-version-number, extract-changelog ]
+    if: ${{ inputs.curseforge == true }}
+    env:
+      RELEASE_VERSION: ${{ needs.extract-version-number.outputs.version }}
+      RELEASE_CHANGELOG: ${{ needs.extract-changelog.outputs.changelog }}
+      CURSEFORGE_TOKEN: ${{ secrets.CURSEFORGE_TOKEN }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Setup Java
+        uses: refinedmods/refinedarchitect/.github/actions/setup-java@develop
+      - name: Deploy to CurseForge
+        run: ./gradlew publishCurseForge
+
   announce-discord:
     name: Announce to Discord
     runs-on: ubuntu-latest
@@ -142,21 +163,6 @@ jobs:
           args: '{{ PROJECT_NAME }} v{{ RELEASE_VERSION }} has been released! {{ RELEASE_URL }}'
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-
-  announce-twitter:
-    name: Announce to Twitter
-    runs-on: ubuntu-latest
-    needs: [ deploy-github-releases, extract-version-number ]
-    if: ${{ inputs.announce == true }}
-    steps:
-      - name: Announce to Twitter
-        uses: ethomson/send-tweet-action@v1
-        with:
-          status: ${{ inputs.project-name }} v${{ needs.extract-version-number.outputs.version }} has been released! ${{ needs.deploy-github-releases.outputs.release-url }}
-          consumer-key: ${{ secrets.TWITTER_CONSUMER_API_KEY }}
-          consumer-secret: ${{ secrets.TWITTER_CONSUMER_API_SECRET }}
-          access-token: ${{ secrets.TWITTER_ACCESS_TOKEN }}
-          access-token-secret: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
 
   announce-mastodon:
     name: Announce to Mastodon
