--- a/helper.gradle
+++ b/helper.gradle
@@ -322,6 +322,7 @@ allprojects {
 }
 
 tasks.register('allJavadoc', Javadoc) {
+    failOnError = false
     def projects = allprojects.stream().filter { p -> p.hasProperty('javadocEnabled') }.toList()
     source projects*.sourceSets.main.allJava
     classpath += files(projects*.sourceSets.main.compileClasspath)
