--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -25,6 +25,10 @@ on:
         required: false
         type: boolean
         default: false
+      javadoc:
+        required: false
+        type: boolean
+        default: true
 jobs:
   extract-version-number:
     name: Extract version number
@@ -97,6 +101,7 @@ jobs:
     name: Publish Javadoc
     runs-on: ubuntu-latest
     needs: [ build, extract-version-number ]
+    if: ${{ inputs.javadoc == true }}
     env:
       RELEASE_VERSION: ${{ needs.extract-version-number.outputs.version }}
     steps:
